# DBR

./: .gitignore  docker-compose.yml  gen_venv.py  requirements.txt  tmux.sh
client/: client.py  constants.py  enums.py
client/dbr/: dbr.py  dbr_environment.py  function.py  query.py
client/query/: base_query.py  get_query.py  set_query.py
client/utils/: globals.py
config/: hostname_regions.csv  region_latencies.csv
docker/: Dockerfile  entrypoint.sh
kvstore/dbr/: dbr.py  dbr_environment.py  dbt.py
kvstore/query/: base_query.py  get_query.py  set_query.py
kvstore/utils/: enums.py  globals.py
query_placement/dbr/: dbr.py  dbr_environment.py
query_placement/query/: get_query.py  range_get_query.py  range_set_query.py  set_query.py
query_placement/utils/: enums.py
queryplacement/dbr/: dbr.py  dbr_environment.py
queryplacement/query/: get_query.py  range_get_query.py  range_set_query.py  set_query.py
queryplacement/utils/: globals.py  logger.py
scripts/: exec_scp.sh  exec_ssh.sh  gen_venv.py  set_latencies.py
src/: constants.py  custom_types.py  enums.py  gen_protos.py  globals.py  utils.py
src/application/: __init__.py  client.py  database_pb2.py  database_pb2_grpc.py  executor.py  gen_proto.py  service.py
src/client/: client.py
src/database/: Cargo.toml  build.rs
src/database/src/: config.rs  database.rs  kv_store.rs  main.rs  service.rs  types.rs
src/database/src/databases/: fjall_db.rs  mod.rs  pickle_db.rs
src/dbclient/: database_pb2.py  database_pb2_grpc.py
src/execution/: __init__.py  executor.py  service.py
(+30 files in other folders)
